apps/mtranserver/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mtranserver
  labels:
    app: mtranserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mtranserver
  template:
    metadata:
      labels:
        app: mtranserver
    spec:
      containers:
        - name: mtranserver
          image: xxnuo/mtranserver:latest
          ports:
            - containerPort: 8989
          volumeMounts:
            - name: models
              mountPath: /app/models
      volumes:
        - name: models
          hostPath:           # 如果是开发环境，hostPath 可以挂载本地
            path: ./models
            type: Directory
