apps/mtranserver/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mtranserver
spec:
  selector:
    app: mtranserver
  ports:
    - protocol: TCP
      port: 8989
      targetPort: 8989
  type: ClusterIP
